@@ -18,6 +18,8 @@ version 0.7.2 - Currently available as svn snapshot
 		using its own population variable.
   - NEW: add --useDefault parameter to use default parameters instead of
 		reading from stdin, if they can not be obtained from other methods.
+  - NEW: simuCluster.py now subst environmental variables, and stops if
+		there is remaining $ in the script.
 
 version 0.7.1 - (Rev 378) - Aug 20, 2006
   - BUG: Fix a bug in backward trajectory simulation
